--- a/Resume10.html
+++ b/Resume10.html
@@ -11,11 +11,12 @@
 
 <body>
     <header>
-        <picture id="profilephoto">
+        <!-- <picture id="profilephoto">
             <source media="(max-width: 650px)" srcset="images/face.jpg">
             <source media="(max-width: 1000px)" srcset="images/shoulders.jpg">
             <img src="images/big.jpg" alt="Profile photo">
-        </picture>
+        </picture> -->
+        <img src="images/Zintle.JPEG" alt="Profile Photo" id="profilephoto">
         <h1>Zintle Mfobo</h1>
         <p id="statement">Seeking an entry-level Software Development opportunity. Offering a strong foundation in
             Front-end Development.</p>
@@ -127,16 +128,16 @@
         <p id="contact">Find me online:</p>
         <div id="footerLinks">
             <a href="https://www.linkedin.com/in/zintle-mfobo-517278245/" target="_blank">
-                <img src="images/linkedin.png" id="logo">
+                <img src="images/linkedin.png" alt="Linkedin" id="logo">
             </a>
 
 
             <a href="https://www.facebook.com/zintle.mfobo" target="_blank">
-                <img src="images/facebook.png" id="logo">
+                <img src="images/facebook.png" alt="Facebook" id="logo">
             </a>
 
             <a href="https://twitter.com/LiliMfobo" target="_blank">
-                <img src="images/twitter.png" id="logo">
+                <img src="images/twitter.png" alt="Twitter" id="logo">
             </a>
         </div>
     </footer>
