--- a/Resume10.html
+++ b/Resume10.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zintle's Resume</title>
+    <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
+    crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 
@@ -128,19 +132,22 @@
         <p id="contact">Find me online:</p>
         <div id="footerLinks">
             <a href="https://www.linkedin.com/in/zintle-mfobo-517278245/" target="_blank">
-                <img src="images/linkedin.png" alt="Linkedin" id="logo">
+                <img src="images/linkedin.png" alt="Linkedin" id="logo1">
             </a>
 
 
             <a href="https://www.facebook.com/zintle.mfobo" target="_blank">
-                <img src="images/facebook.png" alt="Facebook" id="logo">
+                <img src="images/facebook.png" alt="Facebook" id="logo2">
             </a>
 
             <a href="https://twitter.com/LiliMfobo" target="_blank">
-                <img src="images/twitter.png" alt="Twitter" id="logo">
+                <img src="images/twitter.png" alt="Twitter" id="logo3">
             </a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
 
 </html>
