--- a/Resume10.html
+++ b/Resume10.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 
-<body>
-    <header>
-        <!-- <picture id="profilephoto">
+<body class="col p-3" >
+    <header class="col m-0">
+        <!-- Resized Profile photos
+
+            <picture id="profilephoto">
             <source media="(max-width: 650px)" srcset="images/face.jpg">
             <source media="(max-width: 1000px)" srcset="images/shoulders.jpg">
             <img src="images/big.jpg" alt="Profile photo">
@@ -27,9 +29,9 @@
 
     </header>
 
-    <main>
+    <main class="container-text-center">
 
-        <div id="sidebar">
+        <div class="col-lg-2 mt-3 p-0" id="sidebar">
             <nav>
                 <h2 class="nav-menu">Menu</h2>
                 <ul>
@@ -44,7 +46,7 @@
             </nav>
         </div>
 
-        <div id="contents">
+        <div class="col-lg-10 mt-3 p-0"id="contents">
 
             <h2 id="Education">Education</h2>
             <h3>Software Development at <a href="https://www.codespace.co.za/" target="_blank">Codespace Academy</a></h3>
@@ -128,7 +130,7 @@
 
     </main>
 
-    <footer>
+    <footer class="col mt-3 p-0">
         <p id="contact">Find me online:</p>
         <div id="footerLinks">
             <a href="https://www.linkedin.com/in/zintle-mfobo-517278245/" target="_blank">
