--- a/Resume10.html
+++ b/Resume10.html
@@ -14,16 +14,14 @@
 </head>
 
 <body class="col p-3" >
-    <header class="col m-0">
-        <!-- Resized Profile photos
-
-            <picture id="profilephoto">
+    <header class="col m-0"> 
+            <picture>
             <source media="(max-width: 650px)" srcset="images/face.jpg">
             <source media="(max-width: 1000px)" srcset="images/shoulders.jpg">
-            <img src="images/big.jpg" alt="Profile photo">
-        </picture> -->
-        <img src="images/Zintle.JPEG" alt="Profile Photo" id="profilephoto">
-        <h1>Zintle Mfobo</h1>
+            <img src="images/big.jpg" alt="Profile photo" id="profilephoto" class="img-fluid">
+        </picture>
+        <!-- <img src="images/Zintle.JPEG" alt="Profile Photo" class="img-fluid" id="profilephoto"> -->
+        <h1 class="display-2">Zintle Mfobo</h1>
         <p id="statement">Seeking an entry-level Software Development opportunity. Offering a strong foundation in
             Front-end Development.</p>
 
@@ -31,7 +29,7 @@
 
     <main class="container-text-center">
 
-        <div class="col-lg-2 mt-3 p-0" id="sidebar">
+        <div class="col-xl-2 mt-3 p-0" id="sidebar">
             <nav>
                 <h2 class="nav-menu">Menu</h2>
                 <ul>
@@ -46,7 +44,7 @@
             </nav>
         </div>
 
-        <div class="col-lg-10 mt-3 p-0"id="contents">
+        <div class="col-xl-7 mt-3 px-lg-3" id="contents1">
 
             <h2 id="Education">Education</h2>
             <h3>Software Development at <a href="https://www.codespace.co.za/" target="_blank">Codespace Academy</a></h3>
@@ -100,7 +98,8 @@
                 <li>Managing online communities I.e. Slack, Discord</li>
                 <li>Web Design using VS Code and Github</li>
             </ul>
-
+        </div>
+        <div id="contents2" class="col-xl-3 mt-3 p-0">
             <h2 id="Organisations">Organisations</h2>
             <h3>Volunteer at <a href="https://www.facebook.com/SPCAMthatha/" target="_blank">SPCA Mthatha</a></h3>
             <h5>September 2014 - Present</h5>
