--- a/Index.html
+++ b/Index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body class="col p-3" >
-    <header class="col m-0"> 
-        <nav class="navbar navbar-expand-lg" style="background-color: #D37815">
+    <header class="col m-0 pb-3"> 
+        <nav class="navbar navbar-expand-lg" style="background-color: #D37815; color: #ffc">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Home</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
