--- a/Index.html
+++ b/Index.html
@@ -12,10 +12,9 @@
     crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
-
 <body class="col p-3" >
     <header class="col m-0 pb-3"> 
-        <nav class="navbar navbar-expand-lg" style="background-color: #D37815; color: #ffc">
+        <nav class="navbar navbar-expand-lg" style="background-color: #D37815;">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Home</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,22 +62,47 @@
 
     <main class="container-text-center">
 
-        <!-- <div class="col-xl-2 mt-3 p-0" id="sidebar">
-            <nav>
-                <h2 class="nav-menu">Menu</h2>
-                <ul>
-                    <li><a href="#Education">Education</a></li>
-                    <li><a href="#Experience">Experience</a></li>
-                    <li><a href="#Certificates">Certificates</a></li>
-                    <li><a href="#Skills">Skills</a></li>
-                    <li><a href="#Organisations">Organisations</a></li>
-                    <li><a href="#Languages">Languages</a></li>
-                    <li><a href="#Interests">Interests</a></li>
-                </ul>
-            </nav>
-        </div> -->
+        <h1 class="display-2">Zintle Mfobo</h1>
 
-        <div class="col-xl-7 mt-3 px-lg-3" id="contents1">
+        <div class="mt-3 p-3" id="contents1">
+            <!-- <picture>
+                <source media="(max-width: 650px)" srcset="images/face.jpg">
+                <source media="(max-width: 1000px)" srcset="images/shoulders.jpeg">
+                <img src="images/big.jpg" alt="Profile photo" id="profilephoto" class="img-fluid">
+            </picture>
+             <img src="images/Zintle.JPEG" alt="Profile Photo" class="img-fluid" id="profilephoto"> -->
+             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/lionAndMe.jpg" class="d-block w-50 m-auto" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/Lions1.jpeg" class="d-block w-50 m-auto" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/Harties1.jpg" class="d-block w-50 m-auto" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            <h1 class="display-2">Zintle Mfobo</h1>
+            <p id="statement">Seeking an entry-level Software Development opportunity. Offering a strong foundation in
+                Front-end Development.</p>
+        </div>
+
+        <div class="col-xl-7 mt-3 px-lg-3" id="contents2">
 
             <h2 id="Education">Education</h2>
             <h3>Software Development at <a href="https://www.codespace.co.za/" target="_blank">Codespace Academy</a></h3>
@@ -133,7 +157,7 @@
                 <li>Web Design using VS Code and Github</li>
             </ul>
         </div>
-        <div id="contents2" class="col-xl-3 mt-3 p-0">
+        <div id="contents3" class="col-xl-3 mt-3 p-0">
             <h2 id="Organisations">Organisations</h2>
             <h3>Volunteer at <a href="https://www.facebook.com/SPCAMthatha/" target="_blank">SPCA Mthatha</a></h3>
             <h5>September 2014 - Present</h5>
