--- a/Index.html
+++ b/Index.html
@@ -62,16 +62,14 @@
 
     <main class="container-text-center">
 
-        <h1 class="display-2">Zintle Mfobo</h1>
-
-        <div class="mt-3 p-3" id="contents1">
+        <div class="p-3" id="contents1">
             <!-- <picture>
                 <source media="(max-width: 650px)" srcset="images/face.jpg">
                 <source media="(max-width: 1000px)" srcset="images/shoulders.jpeg">
                 <img src="images/big.jpg" alt="Profile photo" id="profilephoto" class="img-fluid">
             </picture>
              <img src="images/Zintle.JPEG" alt="Profile Photo" class="img-fluid" id="profilephoto"> -->
-             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+             <!-- <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -97,12 +95,11 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
-            <h1 class="display-2">Zintle Mfobo</h1>
             <p id="statement">Seeking an entry-level Software Development opportunity. Offering a strong foundation in
-                Front-end Development.</p>
+                Front-end Development.</p> -->
         </div>
 
-        <div class="col-xl-7 mt-3 px-lg-3" id="contents2">
+        <div class="col-xl-7 px-lg-3" id="contents2">
 
             <h2 id="Education">Education</h2>
             <h3>Software Development at <a href="https://www.codespace.co.za/" target="_blank">Codespace Academy</a></h3>
@@ -157,7 +154,7 @@
                 <li>Web Design using VS Code and Github</li>
             </ul>
         </div>
-        <div id="contents3" class="col-xl-3 mt-3 p-0">
+        <div id="contents3" class="col-xl-3 p-0">
             <h2 id="Organisations">Organisations</h2>
             <h3>Volunteer at <a href="https://www.facebook.com/SPCAMthatha/" target="_blank">SPCA Mthatha</a></h3>
             <h5>September 2014 - Present</h5>
@@ -187,7 +184,7 @@
 
     </main>
 
-    <footer class="col mt-3 p-0">
+    <footer class="col pb-3">
         <p id="contact">Find me online:</p>
         <div id="footerLinks">
             <a href="https://www.linkedin.com/in/zintle-mfobo-517278245/" target="_blank">
