--- a/Index.html
+++ b/Index.html
@@ -47,29 +47,47 @@
               </div>
             </div>
         </nav>
-          
-            <!-- <picture>
-            <source media="(max-width: 650px)" srcset="images/face.jpg">
-            <source media="(max-width: 1000px)" srcset="images/shoulders.jpg">
-            <img src="images/big.jpg" alt="Profile photo" id="profilephoto" class="img-fluid">
-        </picture>
-         <img src="images/Zintle.JPEG" alt="Profile Photo" class="img-fluid" id="profilephoto">
-        <h1 class="display-2">Zintle Mfobo</h1>
-        <p id="statement">Seeking an entry-level Software Development opportunity. Offering a strong foundation in
-            Front-end Development.</p> -->
 
     </header>
 
-    <main class="container-text-center">
+    <main>
 
         <div class="p-3" id="contents1">
             <!-- <picture>
-                <source media="(max-width: 650px)" srcset="images/face.jpg">
-                <source media="(max-width: 1000px)" srcset="images/shoulders.jpeg">
-                <img src="images/big.jpg" alt="Profile photo" id="profilephoto" class="img-fluid">
-            </picture>
-             <img src="images/Zintle.JPEG" alt="Profile Photo" class="img-fluid" id="profilephoto"> -->
-             <!-- <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <source media="(max-width: 1200px)" srcset="images/Zintle.JPEG" alt="My Profile Photo" id="profilePhoto">
+                <img scr="images/Zintle.JPEG" alt="My Profile Photo" id="profilePhoto">
+            </picture> -->
+            <!-- <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/lionAndMe.jpg" class="d-block w-50 m-auto" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/Lions1.jpeg" class="d-block w-50 m-auto" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/Harties1.jpg" class="d-block w-50 m-auto" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div> -->
+            <h1 class="display-1">Zintle Mfobo</h1>
+            <p id="statement2">software engineer | web developer | aspiring game developer</p>
+        </div>
+        <div class="carousel" id="contents2">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -95,11 +113,9 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
-            <p id="statement">Seeking an entry-level Software Development opportunity. Offering a strong foundation in
-                Front-end Development.</p> -->
-        </div>
+            </div>
 
-        <div class="col-xl-7 px-lg-3" id="contents2">
+        <div class="px-lg-3" id="contents3">
 
             <h2 id="Education">Education</h2>
             <h3>Software Development at <a href="https://www.codespace.co.za/" target="_blank">Codespace Academy</a></h3>
@@ -154,7 +170,7 @@
                 <li>Web Design using VS Code and Github</li>
             </ul>
         </div>
-        <div id="contents3" class="col-xl-3 p-0">
+        <div id="contents4" class="p-0">
             <h2 id="Organisations">Organisations</h2>
             <h3>Volunteer at <a href="https://www.facebook.com/SPCAMthatha/" target="_blank">SPCA Mthatha</a></h3>
             <h5>September 2014 - Present</h5>
@@ -190,7 +206,6 @@
             <a href="https://www.linkedin.com/in/zintle-mfobo-517278245/" target="_blank">
                 <img src="images/linkedin.png" alt="Linkedin" id="logo1">
             </a>
-
 
             <a href="https://www.facebook.com/zintle.mfobo" target="_blank">
                 <img src="images/facebook.png" alt="Facebook" id="logo2">
