--- a/Index.html
+++ b/Index.html
@@ -95,13 +95,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/lionAndMe.jpg" class="d-block w-50 m-auto" alt="...">
+                    <img src="images/" class="d-block w-50 m-auto" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/Lions1.jpeg" class="d-block w-50 m-auto" alt="...">
+                    <img src="images" class="d-block w-50 m-auto" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/Harties1.jpg" class="d-block w-50 m-auto" alt="...">
+                    <img src="images" class="d-block w-50 m-auto" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
