--- a/Index.html
+++ b/Index.html
@@ -52,7 +52,7 @@
 
     <main>
 
-        <div class="p-3" id="contents1">
+        <div class="py-xl-3" id="contents1">
             <!-- <picture>
                 <source media="(max-width: 1200px)" srcset="images/Zintle.JPEG" alt="My Profile Photo" id="profilePhoto">
                 <img scr="images/Zintle.JPEG" alt="My Profile Photo" id="profilePhoto">
@@ -86,24 +86,33 @@
             <h1 class="display-1">Zintle Mfobo</h1>
             <p id="statement2">software engineer | web developer | aspiring game developer</p>
         </div>
-        <div class="carousel" id="contents2">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+
+        <div class="px-lg-3" id="contents2">
+            <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/" class="d-block w-50 m-auto" alt="...">
+                    <img src="images/drinking.jpeg" class="d-block w-50 m-auto" alt="Lions drinking water">
                   </div>
                   <div class="carousel-item">
-                    <img src="images" class="d-block w-50 m-auto" alt="...">
+                    <img src="images/play.JPG" class="d-block w-50 m-auto" alt="Playing with lions">
                   </div>
                   <div class="carousel-item">
-                    <img src="images" class="d-block w-50 m-auto" alt="...">
+                    <img src="images/boat2.jpeg" class="d-block w-50 m-auto" alt="landscape of Harties">
                   </div>
-                </div>
+                  <div class="carousel-item">
+                    <img src="images/abseiling.jpg" class="d-block w-50 m-auto" alt="Me abseiling">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/boat.jpeg" class="d-block w-50 m-auto" alt="boats in Harties">
+                  </div>
+               </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
@@ -112,8 +121,8 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
-              </div>
             </div>
+        </div>
 
         <div class="px-lg-3" id="contents3">
 
