--- a/Index.html
+++ b/Index.html
@@ -52,7 +52,7 @@
 
     <main>
 
-        <div class="py-xl-3" id="contents1">
+        <div class="py-xl-3 px-4" id="contents1">
             <!-- <picture>
                 <source media="(max-width: 1200px)" srcset="images/Zintle.JPEG" alt="My Profile Photo" id="profilePhoto">
                 <img scr="images/Zintle.JPEG" alt="My Profile Photo" id="profilePhoto">
@@ -83,8 +83,8 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div> -->
-            <h1 class="display-1">Zintle Mfobo</h1>
-            <p id="statement2">software engineer | web developer | aspiring game developer</p>
+            <h1>Zintle Mfobo</h1>
+            <p id="statement">software engineer | web developer | aspiring game developer</p>
         </div>
 
         <div class="px-lg-3" id="contents2">
