--- a/Index.html
+++ b/Index.html
@@ -53,38 +53,8 @@
     <main>
 
         <div class="py-xl-3 px-4" id="contents1">
-            <!-- <picture>
-                <source media="(max-width: 1200px)" srcset="images/Zintle.JPEG" alt="My Profile Photo" id="profilePhoto">
-                <img scr="images/Zintle.JPEG" alt="My Profile Photo" id="profilePhoto">
-            </picture> -->
-            <!-- <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="images/lionAndMe.jpg" class="d-block w-50 m-auto" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/Lions1.jpeg" class="d-block w-50 m-auto" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/Harties1.jpg" class="d-block w-50 m-auto" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div> -->
             <h1>Zintle Mfobo</h1>
-            <p id="statement">software engineer | web developer | aspiring game developer</p>
+            <p id="statement">software engineer | web & game developer</p>
         </div>
 
         <div class="px-lg-3" id="contents2">
@@ -140,7 +110,8 @@
                 <li>Aggregate of 73%</li>
                 <li>Major subjects included Physical Sciences, Mathematics, Life Sciences and Accounting</li>
             </ul>
-
+        </div>
+        <div class="px-lg-3" id="contents4">
             <h2 id="Experience">Experience</h2>
             <h3>Gaming Support Agent at <a href="https://5ca.com/" target="_blank">5CA</a></h3>
             <h5>January 2022 - June 2022</h5>
@@ -161,7 +132,8 @@
                 <li>Answer 120 to 180 phone calls per week</li>
                 <li>Email all customers within 3 minutes of every calls</li>
             </ul>
-
+        </div>
+        <div id="contents5" class="p-0">
             <h2 id="Certificates">Certificates</h2>
             <ul>
                 <li>Certificate of Service at <a href="https://www.amazon.com/" target="_blank">Amazon</a></li>
@@ -179,7 +151,7 @@
                 <li>Web Design using VS Code and Github</li>
             </ul>
         </div>
-        <div id="contents4" class="p-0">
+        <div id="contents6" class="p-0">
             <h2 id="Organisations">Organisations</h2>
             <h3>Volunteer at <a href="https://www.facebook.com/SPCAMthatha/" target="_blank">SPCA Mthatha</a></h3>
             <h5>September 2014 - Present</h5>
