--- a/Index.html
+++ b/Index.html
@@ -53,12 +53,12 @@
     <main>
 
         <div class="py-xl-3 px-4" id="contents1">
-            <h1>Zintle Mfobo</h1>
+            <h1 id="head">Zintle Mfobo</h1>
             <p id="statement">software engineer | web & game developer</p>
         </div>
 
         <div class="px-lg-3" id="contents2">
-            <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
+            <div id="carouselExampleIndicators" class="carousel carousel-dark slide mt-3" data-bs-ride="true">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -92,6 +92,12 @@
                   <span class="visually-hidden">Next</span>
                 </button>
             </div>
+          <p my-5 id="intro"> 
+            Hello, nice to meet you. Take a seat and let's get to know each other. I'm an introvert who love all animals, but especially my dogs Suki and Milo. 
+            After spending most days in front of the screen, I thrive in the outdoors. Hiking, sailing, zip-lining... whatever it is, I'm there. I do have an artsy-fartsy side.
+            It mostly manifests itself in the form of drawing and creative writing. Telling wild imaginings is a speciality of mine.
+            Maybe that's why I create the most amazing games. I find that a bit of color and flair make for the best developers. After all Valar Moghulis.  
+          </p>
         </div>
 
         <div class="px-lg-3" id="contents3">
@@ -103,6 +109,12 @@
                 <li>Completed Intro to Web Design focusing on HTML and CSS</li>
                 <li>Aquiring necessary Front-end Development Skills</li>
             </ul>
+            <h3>Google UX Design at <a href="https://www.coursera.org/" target="_blank">Coursera</a></h3>
+            <h5>June 2022 - Present</h5>
+            <ul>
+                <li>Completed Foundations of User Experience (UX) Design</li>
+                <li>Build Wireframes and Low-Fidelity Prototypes</li>
+            </ul>
             <h3>National Senior Certificate at <a href="http://uhs.ecape.school.za/" target="_blank">Umtata High School</a></h3>
             <h5>Completed December 2016</h5>
             <ul>
@@ -113,25 +125,36 @@
         </div>
         <div class="px-lg-3" id="contents4">
             <h2 id="Experience">Experience</h2>
-            <h3>Gaming Support Agent at <a href="https://5ca.com/" target="_blank">5CA</a></h3>
+        <div class="jumbotron">
+          <h3>Gaming Support Agent at <a href="https://5ca.com/" target="_blank">5CA</a></h3>
             <h5>January 2022 - June 2022</h5>
             <h5>Achievements/Tasks</h5>
-            <ul>
-                <li>Answer incoming emails and chats in a timely manner</li>
-                <li>Resolve technical customer problems</li>
-                <li>Resolve user issues using ticket system</li>
-                <li>Constantly champion the customer</li>
-            </ul>
-
-            <h3>Customer Service Associate at <a href="https://www.amazon.com/" target="_blank">Amazon</a></h3>
+          <hr class="my-4">
+          <ul>
+            <li>Answer incoming emails and chats in a timely manner</li>
+            <li>Resolve technical customer problems</li>
+            <li>Resolve user issues using ticket system</li>
+            <li>Constantly champion the customer</li>
+        </ul>
+          <p class="lead">
+            <a class="btn btn-primary btn-lg" href="https://careers.5ca.com/" target="_blank" role="button">Learn more</a>
+          </p>
+        </div>
+        <div class="jumbotron">
+          <h3>Customer Service Associate at <a href="https://www.amazon.com/" target="_blank">Amazon</a></h3>
             <h5>October 2020 - June 2021</h5>
             <h5>Achievement/tasks</h5>
-            <ul>
-                <li>Solve customer problems</li>
-                <li>Make customers feel understood by being empathetic</li>
-                <li>Answer 120 to 180 phone calls per week</li>
-                <li>Email all customers within 3 minutes of every calls</li>
-            </ul>
+          <hr class="my-4">
+          <ul>
+            <li>Solve customer problems</li>
+            <li>Make customers feel understood by being empathetic</li>
+            <li>Answer 120 to 180 phone calls per week</li>
+            <li>Email all customers within 3 minutes of every calls</li>
+        </ul>
+          <p class="lead">
+            <a class="btn btn-primary btn-lg" href="https://www.amazon.jobs/en/" target="_blank" role="button">Learn more</a>
+          </p>
+        </div>
         </div>
         <div id="contents5" class="p-0">
             <h2 id="Certificates">Certificates</h2>
