--- a/Index.html
+++ b/Index.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="px-lg-3" id="contents3">
-
+          <div id="education">
             <h2 id="Education">Education</h2>
             <h3>Software Development at <a href="https://www.codespace.co.za/" target="_blank">Codespace Academy</a></h3>
             <h5>June 2022 - Present</h5>
@@ -122,6 +122,19 @@
                 <li>Aggregate of 73%</li>
                 <li>Major subjects included Physical Sciences, Mathematics, Life Sciences and Accounting</li>
             </ul>
+            <div id="badges">
+              <div id="codeSpace">
+                 <img src="images/codespace.png" id="codeSpace" alt="Codespace Academy logo">
+              </div>
+              <div>
+                 <img src="images/coursera.png" id="coursera" alt="Coursera logo">
+              </div>
+              <div>
+                 <img src="images/UHS.webp" id="uhs" alt="Umata High School badge">
+              </div>
+            </div>
+          </div>
+         
         </div>
         <div class="px-lg-3" id="contents4">
             <h2 id="Experience">Experience</h2>
