--- a/Index.html
+++ b/Index.html
@@ -123,7 +123,7 @@
                 <li>Major subjects included Physical Sciences, Mathematics, Life Sciences and Accounting</li>
             </ul>
             <div id="badges">
-              <div id="codeSpace">
+              <div>
                  <img src="images/codespace.png" id="codeSpace" alt="Codespace Academy logo">
               </div>
               <div>
