--- a/Index.html
+++ b/Index.html
@@ -185,6 +185,8 @@
                 <li>Customer Service</li>
                 <li>Managing online communities I.e. Slack, Discord</li>
                 <li>Web Design using VS Code and Github</li>
+                <li>HTML</li>
+                <li>CSS</li>
             </ul>
         </div>
         <div id="contents6" class="p-0">
