--- a/Index.html
+++ b/Index.html
@@ -105,19 +105,19 @@
             <h2 id="Education">Education</h2>
             <h3>Software Development at <a href="https://www.codespace.co.za/" target="_blank">Codespace Academy</a></h3>
             <h5>June 2022 - Present</h5>
-            <ul>
+            <ul style="list-style:none ;">
                 <li>Completed Intro to Web Design focusing on HTML and CSS</li>
                 <li>Aquiring necessary Front-end Development Skills</li>
             </ul>
             <h3>Google UX Design at <a href="https://www.coursera.org/" target="_blank">Coursera</a></h3>
             <h5>June 2022 - Present</h5>
-            <ul>
+            <ul style="list-style:none ;">
                 <li>Completed Foundations of User Experience (UX) Design</li>
                 <li>Build Wireframes and Low-Fidelity Prototypes</li>
             </ul>
             <h3>National Senior Certificate at <a href="http://uhs.ecape.school.za/" target="_blank">Umtata High School</a></h3>
             <h5>Completed December 2016</h5>
-            <ul>
+            <ul style="list-style:none ;">
                 <li>Achieved an entry into Bachelors pass</li>
                 <li>Aggregate of 73%</li>
                 <li>Major subjects included Physical Sciences, Mathematics, Life Sciences and Accounting</li>
@@ -143,7 +143,7 @@
             <h5>January 2022 - June 2022</h5>
             <h5>Achievements/Tasks</h5>
           <hr class="my-4">
-          <ul>
+          <ul style="list-style:none ;">
             <li>Answer incoming emails and chats in a timely manner</li>
             <li>Resolve technical customer problems</li>
             <li>Resolve user issues using ticket system</li>
@@ -158,7 +158,7 @@
             <h5>October 2020 - June 2021</h5>
             <h5>Achievement/tasks</h5>
           <hr class="my-4">
-          <ul>
+          <ul style="list-style:none ;">
             <li>Solve customer problems</li>
             <li>Make customers feel understood by being empathetic</li>
             <li>Answer 120 to 180 phone calls per week</li>
@@ -171,14 +171,14 @@
         </div>
         <div id="contents5" class="p-0">
             <h2 id="Certificates">Certificates</h2>
-            <ul>
+            <ul style="list-style:none ;">
                 <li>Certificate of Service at <a href="https://www.amazon.com/" target="_blank">Amazon</a></li>
                 <li>Microsoft Office 101 by <a href="https://nemisa.co.za/" target="_blank">NEMISA</a></li>
                 <li>Digital Literacy by <a href="https://nemisa.co.za/" target="_blank">NEMISA</a></li>
             </ul>
 
             <h2 id="Skills">Skills</h2>
-            <ul>
+            <ul style="list-style:none ;">
                 <li>Zendesk</li>
                 <li>Microsoft Office</li>
                 <li>Shopify</li>
@@ -188,6 +188,11 @@
                 <li>HTML</li>
                 <li>CSS</li>
             </ul>
+            <picture>
+              <source media="(max-width: 650px)" srcset="images/small.jpg">
+              <source media="(max-width: 1000px)" srcset="images/med.png">
+              <img src="images/big.png" alt="HTML and CSS logo" id="htmlCSS">
+          </picture>
         </div>
         <div id="contents6" class="p-0">
             <h2 id="Organisations">Organisations</h2>
@@ -198,7 +203,7 @@
 
             
             <h2 id="Languages">Languages</h2>
-            <ul>
+            <ul style="list-style:none ;">
                 <li>English</li>
                 <h5>Native or Bilingual Proficiency</h5>
                 <li>IsiXhosa</li>
@@ -210,7 +215,7 @@
             </ul>
 
             <h2 id="Interests">Interests</h2>
-            <ul>
+            <ul style="list-style:none ;">
                 <li>Learning website design</li>
                 <li>Watching and learning about Robot combat</li>
                 <li>Toggling various websites using web inspection</li>
