--- a/Index.html
+++ b/Index.html
@@ -138,7 +138,7 @@
         </div>
         <div class="px-lg-3" id="contents4">
             <h2 id="Experience">Experience</h2>
-        <div class="jumbotron">
+        <div class="jumbotron mt-5">
           <h3>Gaming Support Agent at <a href="https://5ca.com/" target="_blank">5CA</a></h3>
             <h5>January 2022 - June 2022</h5>
             <h5>Achievements/Tasks</h5>
@@ -150,7 +150,7 @@
             <li>Constantly champion the customer</li>
         </ul>
           <p class="lead">
-            <a class="btn btn-primary btn-lg" href="https://careers.5ca.com/" target="_blank" role="button">Learn more</a>
+            <a class="btn btn-outline-secondary btn-lg" href="https://careers.5ca.com/" target="_blank" role="button">Visit</a>
           </p>
         </div>
         <div class="jumbotron">
@@ -165,7 +165,7 @@
             <li>Email all customers within 3 minutes of every calls</li>
         </ul>
           <p class="lead">
-            <a class="btn btn-primary btn-lg" href="https://www.amazon.jobs/en/" target="_blank" role="button">Learn more</a>
+            <a class="btn btn-outline-secondary btn-lg" href="https://www.amazon.jobs/en/" target="_blank" role="button">Visit</a>
           </p>
         </div>
         </div>
@@ -200,10 +200,10 @@
             <h5>September 2014 - Present</h5>
             <h3>Member at <a href="https://www.valueed.co.za/" target="_blank">Value Ed</a></h3>
             <h5>April 2022 - Present</h5>
-
-            
+        </div>
+        <div id="contents6" class="p-0">
             <h2 id="Languages">Languages</h2>
-            <ul style="list-style:none ;">
+            <ul style="list-style:none;">
                 <li>English</li>
                 <h5>Native or Bilingual Proficiency</h5>
                 <li>IsiXhosa</li>
@@ -214,8 +214,16 @@
                 <h5>Limited Working Proficiency</h5>
             </ul>
 
-            <h2 id="Interests">Interests</h2>
-            <ul style="list-style:none ;">
+            <h2>Interests</h2>
+            <div id="robots">
+              <div>
+                 <img src="images/robot1.svg" id="robot1" alt="First robot1">
+              </div>
+              <div>
+                 <img src="images/robot2.svg" id="robot2" alt="Secont robot">
+              </div>
+            </div>
+            <ul style="list-style:none ;" id="interests">
                 <li>Learning website design</li>
                 <li>Watching and learning about Robot combat</li>
                 <li>Toggling various websites using web inspection</li>
