--- a/Index.html
+++ b/Index.html
@@ -195,11 +195,21 @@
           </picture>
         </div>
         <div id="contents6" class="p-0">
-            <h2 id="Organisations">Organisations</h2>
-            <h3>Volunteer at <a href="https://www.facebook.com/SPCAMthatha/" target="_blank">SPCA Mthatha</a></h3>
-            <h5>September 2014 - Present</h5>
-            <h3>Member at <a href="https://www.valueed.co.za/" target="_blank">Value Ed</a></h3>
-            <h5>April 2022 - Present</h5>
+           <h2>Organisations</h2>
+          <div id="organisations">
+             <h3>Volunteer at <a href="https://www.facebook.com/SPCAMthatha/" target="_blank">SPCA Mthatha</a></h3>
+             <h5>September 2014 - Present</h5>
+             <h3>Member at <a href="https://www.valueed.co.za/" target="_blank">Value Ed</a></h3>
+             <h5>April 2022 - Present</h5>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
         <div id="contents6" class="p-0">
             <h2 id="Languages">Languages</h2>
