--- a/Index.html
+++ b/Index.html
@@ -202,16 +202,17 @@
              <h3>Member at <a href="https://www.valueed.co.za/" target="_blank">Value Ed</a></h3>
              <h5>April 2022 - Present</h5>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card" style="width: 50vw; margin-left: 25vw; margin-top: 10vh;">
+            <img src="images/world-heart.svg" class="card-img-top" alt="Drawing of Earth with a heart" style="height: 25vh;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Community</h5>
+              <p class="card-text">Being a part of a community and giving back by donating to the SPCA and Value Ed give me a sense of purpose and fulfillment. If you want to give back too feel free to use the links below.</p>
+              <a href="https://nspca.co.za/donate/" target="_blank" class="btn btn-outline-secondary">SPCA donor</a>
+              <a href="https://www.valueed.co.za/donate" target="_blank" class="btn btn-outline-secondary">Value Ed patron</a>
             </div>
           </div>
         </div>
-        <div id="contents6" class="p-0">
+        <div id="contents7" class="p-0">
             <h2 id="Languages">Languages</h2>
             <ul style="list-style:none;">
                 <li>English</li>
