--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
-<body class="col p-3" >
+<body class="col" >
     <header class="col m-0 pb-3"> 
         <nav class="navbar navbar-expand-lg" style="background-color: #D37815;">
             <div class="container-fluid">
@@ -206,7 +206,8 @@
             <img src="images/world-heart.svg" class="card-img-top" alt="Drawing of Earth with a heart" style="height: 25vh;">
             <div class="card-body">
               <h5 class="card-title">Community</h5>
-              <p class="card-text">Being a part of a community and giving back by donating to the SPCA and Value Ed give me a sense of purpose and fulfillment. If you want to give back too feel free to use the links below.</p>
+              <p class="card-text">Being a part of a community and giving back by donating to the SPCA and Value Ed give me a sense of purpose and fulfillment. 
+                If you want to give back too feel free to use the links below.</p>
               <a href="https://nspca.co.za/donate/" target="_blank" class="btn btn-outline-secondary">SPCA donor</a>
               <a href="https://www.valueed.co.za/donate" target="_blank" class="btn btn-outline-secondary">Value Ed patron</a>
             </div>
@@ -243,7 +244,7 @@
 
     </main>
 
-    <footer class="col pb-3">
+    <footer class="col">
         <p id="contact">Find me online:</p>
         <div id="footerLinks">
             <a href="https://www.linkedin.com/in/zintle-mfobo-517278245/" target="_blank">
