--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,14 @@
         </div>
 
         <div class="px-lg-3" id="contents2">
-            <div id="carouselExampleIndicators" class="carousel carousel-dark slide mt-3" data-bs-ride="true">
+          <h2>Introduction</h2>
+          <p id="intro"> 
+            Hello, nice to meet you. Take a seat and let's get to know each other. I'm an introvert who love all animals, but especially my dogs Suki and Milo. 
+            After spending most days in front of the screen, I thrive in the outdoors. Hiking, sailing, zip-lining... whatever it is, I'm there. I do have an artsy-fartsy side.
+            It mostly manifests itself in the form of drawing and creative writing. Telling wild imaginings is a speciality of mine.
+            Maybe that's why I create the most amazing games. I find that a bit of color and flair make for the best developers. After all Valar Moghulis.  
+          </p>
+            <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -92,12 +99,6 @@
                   <span class="visually-hidden">Next</span>
                 </button>
             </div>
-          <p my-5 id="intro"> 
-            Hello, nice to meet you. Take a seat and let's get to know each other. I'm an introvert who love all animals, but especially my dogs Suki and Milo. 
-            After spending most days in front of the screen, I thrive in the outdoors. Hiking, sailing, zip-lining... whatever it is, I'm there. I do have an artsy-fartsy side.
-            It mostly manifests itself in the form of drawing and creative writing. Telling wild imaginings is a speciality of mine.
-            Maybe that's why I create the most amazing games. I find that a bit of color and flair make for the best developers. After all Valar Moghulis.  
-          </p>
         </div>
 
         <div class="px-lg-3" id="contents3">
