--- a/Index.html
+++ b/Index.html
@@ -204,7 +204,7 @@
              <h5>April 2022 - Present</h5>
           </div>
           <div class="card" style="width: 50vw; margin-left: 25vw; margin-top: 10vh;">
-            <img src="images/world-heart.svg" class="card-img-top" alt="Drawing of Earth with a heart" style="height: 25vh;">
+            <img src="images/world-heart.svg" class="card-img-top mt-2" alt="Drawing of Earth with a heart" style="height: 25vh;">
             <div class="card-body">
               <h5 class="card-title">Community</h5>
               <p class="card-text">Being a part of a community and giving back by donating to the SPCA and Value Ed give me a sense of purpose and fulfillment. 
