--- a/Index.html
+++ b/Index.html
@@ -207,8 +207,8 @@
             <img src="images/world-heart.svg" class="card-img-top mt-2" alt="Drawing of Earth with a heart" style="height: 25vh;">
             <div class="card-body">
               <h5 class="card-title">Community</h5>
-              <p class="card-text">Being a part of a community and giving back by donating to the SPCA and Value Ed give me a sense of purpose and fulfillment. 
-                If you want to give back too feel free to use the links below.</p>
+              <p class="card-text">Being a part of a community and giving back gives me a sense of purpose. 
+                If you want to give back too please follow the links.</p>
               <a href="https://nspca.co.za/donate/" target="_blank" class="btn btn-outline-secondary">SPCA donor</a>
               <a href="https://www.valueed.co.za/donate" target="_blank" class="btn btn-outline-secondary">Value Ed patron</a>
             </div>
