--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 <body class="col" >
-    <header class="col m-0 pb-3"> 
+    <header class="col m-0"> 
         <nav class="navbar navbar-expand-lg" style="background-color: #D37815;">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Home</a>
@@ -42,6 +42,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#Interests">Interests</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#footer">Contact me</a>
                   </li>
                 </ul>
               </div>
@@ -139,11 +142,11 @@
         </div>
         <div class="px-lg-3" id="contents4">
             <h2 id="Experience">Experience</h2>
-        <div class="jumbotron mt-5">
+        <div class="jumbotron">
           <h3>Gaming Support Agent at <a href="https://5ca.com/" target="_blank">5CA</a></h3>
             <h5>January 2022 - June 2022</h5>
             <h5>Achievements/Tasks</h5>
-          <hr class="my-4">
+          <hr>
           <ul style="list-style:none ;">
             <li>Answer incoming emails and chats in a timely manner</li>
             <li>Resolve technical customer problems</li>
@@ -151,14 +154,14 @@
             <li>Constantly champion the customer</li>
         </ul>
           <p class="lead">
-            <a class="btn btn-outline-secondary btn-lg" href="https://careers.5ca.com/" target="_blank" role="button">Visit</a>
+            <a class="btn btn-outline-secondary btn-md" href="https://careers.5ca.com/" target="_blank" role="button">Visit</a>
           </p>
         </div>
         <div class="jumbotron">
           <h3>Customer Service Associate at <a href="https://www.amazon.com/" target="_blank">Amazon</a></h3>
             <h5>October 2020 - June 2021</h5>
             <h5>Achievement/tasks</h5>
-          <hr class="my-4">
+          <hr>
           <ul style="list-style:none ;">
             <li>Solve customer problems</li>
             <li>Make customers feel understood by being empathetic</li>
@@ -166,7 +169,7 @@
             <li>Email all customers within 3 minutes of every calls</li>
         </ul>
           <p class="lead">
-            <a class="btn btn-outline-secondary btn-lg" href="https://www.amazon.jobs/en/" target="_blank" role="button">Visit</a>
+            <a class="btn btn-outline-secondary btn-md" href="https://www.amazon.jobs/en/" target="_blank" role="button">Visit</a>
           </p>
         </div>
         </div>
@@ -203,7 +206,7 @@
              <h3>Member at <a href="https://www.valueed.co.za/" target="_blank">Value Ed</a></h3>
              <h5>April 2022 - Present</h5>
           </div>
-          <div class="card" style="width: 50vw; margin-left: 25vw; margin-top: 10vh;">
+          <div class="card" style="width: 45vw; margin-left: 30vw; margin-top: 7vh;">
             <img src="images/world-heart.svg" class="card-img-top mt-2" alt="Drawing of Earth with a heart" style="height: 25vh;">
             <div class="card-body">
               <h5 class="card-title">Community</h5>
@@ -245,7 +248,7 @@
 
     </main>
 
-    <footer class="col">
+    <footer class="col" id="footer">
         <p id="contact">Find me online:</p>
         <div id="footerLinks">
             <a href="https://www.linkedin.com/in/zintle-mfobo-517278245/" target="_blank">
